--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,255 +1,452 @@
+/******* Change Box Model ***************/
+
 :root {
-  --primary-fg: rgb(54, 171, 220);
-  --primary-bg: rgb(248, 251, 253);
-  --secondary-fg: rgb(236, 229, 209);
-  --secondary-bg: rgb(39, 76, 157);
-  --pop: rgb(54, 171, 220);
-  --decorative-font: "Anta", sans-serif;
-  --body-font: Verdana, Tahoma, sans-serif;
+  --primary-color: #25292d;
+  --secondary-color: #007bff;
+  --white-color: #ffffff;
+  --black-color: #000000;
+  --hero-description-bg-color: #ffffff44;
+  --background-image: url('/images/site/small_check.jpg');
 }
 
-/******* Change Box Model ***************/
-*,
+
+#loom-companion-mv3 {
+  display: none !important;
+}
+
+
+* {
+  font-family: 'Arial', sans-serif;
+  border-radius: 6px;
+}
+
+p,
+h2,
+hr,
+a {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+#index-hero h1,
+h3,
+h4 {
+  margin: 1rem 0;
+  padding: 0;
+}
+
+
+.notice {
+  color: orange;
+  list-style: none;
+}
+
+
+
+body {
+  display: flex;
+  justify-content: center;
+  background-image: var(--background-image);
+  /* height: 100vh; */
+
+}
+
+footer {
+  padding-top: 2rem;
+}
+
+body>div {
+  border: 2px solid var(--secondary-color);
+  border-radius: 5px;
+  padding: 1rem;
+  /* max-width: 100vw; */
+  /* height: 90vh; */
+  width: 80vw;
+  background-color: var(--white-color);
+}
+
+.siteName a {
+  font-size: 2rem;
+
+}
+
 *:before,
 *:after {
   box-sizing: border-box;
 }
 
-header,
-footer,
-main {
-  padding: 1rem;
-}
+/* body {} */
 
-body {
-  background-color: var(--primary-bg);
-  margin: 0;
-  font-family: var(--body-font);
-  border-radius: 0;
-  border-width: 0;
-  transition: padding 1s;
-}
-
-header {
+#top-header {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  margin: 1rem .1rem;
+  align-items: center;
+
 }
+
+#top-header * {
+  text-decoration: none;
+}
+
 
 nav {
-  color: var(--secondary-fg);
-  background-color: var(--secondary-bg);
-  width: 100%;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.703);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  height: 2rem;
 }
 
 nav ul {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-around;
+  list-style: none;
+  width: 100%;
+  padding: 0;
+  align-items: center;
+  text-decoration: none;
 }
 
-main {
-  display: flex;
-  flex-direction: column;
+nav ul li {
+  width: 100px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 1rem;
+  color: var(--white-color);
+
 }
 
 
 nav a {
-  display: inline-block;
-  color: unset;
   text-decoration: none;
-  transition: transform .5s;
+  color: var(--white-color);
 }
 
-nav a:hover {
-  transform: scale(1.1);
-  transition: transform .5s;
+nav ul li:hover {
+  background-color: var(--secondary-color);
+  padding: .4rem 0;
+
+
 }
 
-a {
-  color: unset;
-}
-
-
-input:read-only {
-  background-color: rgba(255, 255, 255, 0.55);
-}
-
-nav ul {
+#index-hero-image-container {
   display: flex;
-  flex-direction: row;
-  text-decoration: none;
-  justify-content: space-around;
-  list-style: none;
-  padding: .5rem 2rem .5rem 2rem;
-  gap: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
+  justify-content: center;
 
-h1,
-h2,
-h3,
-h4 {
-  font-family: var(--decorative-font);
 }
 
 
-.content {
-  display: flex;
-  flex-direction: column;
-}
+#index-hero {
+  margin-bottom: 1rem;
 
-.siteName a {
-  font-family: var(--decorative-font);
-  font-size: 2rem;
-  text-decoration: none;
-  color: var(--primary-fg);
-  font-size: 2.5rem;
 }
 
 
-/* Hero */
-.hero {
-  padding: 1rem;
-  background-color: white;
-  width: 100%;
+#index-hero>div {
   position: relative;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  align-items: center;
-  justify-content: center;
-  border-radius: .5rem;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.111);
-}
-
-.hero img {
-  width: 80%;
-  grid-column: 1/4;
-  grid-row: 1/2;
-  justify-self: center;
 
 }
 
-.hero-text {
+#index-hero-description {
+  position: absolute;
+  padding: .2rem;
+  background-color: var(--hero-description-bg-color);
+  margin: 0 0 0 3rem;
+  top: 40%;
+  left: 10%;
+  color: var(--secondary-color);
+  font-weight: bolder;
+
+}
+
+#index-hero-description>div>p {
+  padding-bottom: .4rem;
+
+}
+
+#own-today-button {
+  height: 2.7rem;
+}
+
+#index-content {
   display: flex;
-  flex-direction: column;
-  grid-column: 1/2;
-  grid-row: 1/2;
-  width: fit-content;
-  background-color: rgba(255, 255, 255, 0.703);
-  color: var(--pop);
-  padding: .5rem;
-  box-shadow: 0 0 20px rgba(0, 102, 255, 0.092);
+  justify-content: stretch;
+  align-items: stretch;
+
 }
 
-.hero-text input {
-  align-self: center;
+.index-car-upgrades,
+.index-car-reviews {
+  flex: 1;
 }
 
+.index-car-reviews {
+  margin-left: 1.5rem;
+}
 
-.hero ul {
-  list-style: none;
+.index-car-reviews ul,
+.index-car-reviews li {
   padding: 0;
+  /* overflow: visible; */
+  /* overflow-wrap: normal; */
+
 }
 
-/* Gallery */
-.gallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem;
-  padding-left: .1rem;
-  padding-right: .1rem;
-}
-
-/* Caption Image */
-.caption-image {
-  width: 100%;
+.index-car-upgrade-cards {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--secondary-bg);
-  color: var(--secondary-fg);
-  border-radius: .5rem;
+  /* grid-template-columns: repeat(2, 1fr);
+grid-gap: .1rem;
+grid-template-rows: repeat(2, 1fr); */
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: .5rem;
 
 }
 
-.caption-image>div {
-
-  width: 100%;
-  height: 100%;
+.index-upgrade-card {
   display: flex;
+  flex: 0 0 calc(40% - 10px);
   flex-direction: column;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.index-upgrade-card>div {
+  background-color: var(--secondary-color);
+  border: 1px solid black;
+  align-self: center;
+  display: flex;
   justify-content: center;
-
-}
-
-.caption-image>p {
-  padding: .5rem;
-  margin: 0;
-  background-color: rgba(255, 255, 255, 0.127);
+  align-items: center;
+  min-height: 60px;
   width: 100%;
-  text-align: center;
 
 }
 
-.button-own {
-  background-color: var(--pop) !important;
-  color: black !important;
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 0.75rem 1.5rem;
-  border: none;
-  border-radius: 0.5rem;
+.index-upgrade-card a {
+  margin: 0;
+  margin-bottom: 1rem;
+  font-size: .9rem;
+  align-self: center;
+
+}
+
+.index-upgrade-card>div>img {
+  max-height: 50px;
+}
+
+#big-red-button {
+  background-color: red;
+  color: var(--white-color);
+  /* font-weight: bolder; */
+  font-size: .7rem;
+  border-radius: 30px;
+  border: 1px solid black;
+  padding: .4rem;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  opacity: 1;
-  filter: none;
+  box-shadow: 0 5px 0px black;
+}
+
+#inv-display {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+#inv-display li {
+  margin: .5rem;
+  background-color: var(--white-color);
+}
+
+#inv-display li>div {
+  border: 1px solid black;
+  border-radius: 8px;
+  height: 300px;
+  width: 300px;
+  overflow: hidden;
+}
+
+#inv-display a {
+  text-decoration: none;
+
+}
+
+.class_lists__image img {
+  width: 300px;
+  height: 210px;
+  object-fit: fill;
+  overflow: hidden;
+  /* max-width: 200px; */
+  /* max-height: 400px; */
+}
+
+#inv-display span {
+  margin: .2rem .2rem;
+}
+
+#inv-display .namePrice {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#inv_page__detail {
+  display: flex;
+  flex-direction: column;
+}
+
+#inv_page__detail>div {
+  margin: 1rem;
+}
+
+#inv_page__detail img {
+  border-radius: 8px;
+  border: .5px solid black;
+  /* fuzzy shadow bottom right */
+  box-shadow: 4px 5px 5px black;
+  transform: scale(1.05);
+  transition: transform 1s;
+  width: 50vw;
+  height: 25vw
+}
+
+.inv__details {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.inv__details-content {
+  list-style: none;
+}
+
+.inv__details-content li {
+  margin: .5rem 0;
+  font-size: 1.1rem;
+}
+
+.inv__details-content li span:nth-child(1) {
+  font-weight: bolder;
+}
+
+.inv__details-content_description {}
+
+
+
+.form_part {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: var(--white-color);
+  width: 100%;
+  margin-bottom: .75rem;
+  /* margin: 1rem; */
+  /* align-items: flex-start; */
 }
 
 
-@media screen and (min-width: 700px) {
-  body {
-    background-image: url('/images/site/small_check.jpg');
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    transition: padding 1s;
-  }
+fieldset {
+  padding: 1rem;
+  max-width: 25%;
 
-  .content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-  }
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border: 1px solid black;
+  text-wrap: none;
 
-  section#reviews {
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-
-  section#upgrades {
-    grid-column: 1/2;
-    grid-row: 1/2;
-  }
-
-  ul#inv-display {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  #wrapper {
-    max-width: 1200px;
-    width: 90%;
-    background-color: rgba(255, 255, 255, 0.9);
-    border: 2px solid var(--primary-fg);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    padding: 1.5rem;
-  }
+}
 
 
+input,
+select {
+  width: 95%;
+  height: 1.5rem;
+  border: 1px solid black;
+}
+
+fieldset h2 {
+  color: var(--white-color);
+  margin: 1rem 0;
+}
+
+fieldset button {
+  margin: 1rem 0;
+  /* max-width: 100px; */
+  border-radius: 12px;
+  align-self: center;
+  cursor: pointer;
+  padding: .5rem .7rem;
+  font-size: medium;
+  background-color: var(--white-color);
+  color: var(--black-color);
+  border: 1px solid black;
+}
+
+
+.login_signup_message {
+  margin-left: 16%;
+  text-wrap: none;
+}
+
+
+/* disabled button */
+fieldset button:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+}
+
+fieldset a {
+  text-decoration: underline;
+  color: var(--secondary-color);
+  cursor: pointer;
+}
+
+#showPass {
+  /* margin-left: 1rem; */
+  cursor: pointer;
+}
+
+
+input:required:invalid,
+input:focus:invalid {
+  background-image: url(/images/invalid.png);
+  background-position: right top;
+  background-repeat: no-repeat;
+}
+
+input:required:valid {
+  background-image: url(/images/valid.png);
+  background-position: right top;
+  background-repeat: no-repeat;
+}
+
+label {
+  width: 100%;
+}
+
+fieldset span {
+  /* margin-top: .4rem; */
+  margin: .4rem 0;
+}
+
+.form_instruct,
+.form_direct {
+  display: block;
+}
+
+fieldset>div>label>span:nth-child(5) {
+  font-size: .7rem;
+}
+
+section h2 {
+  margin: 1rem 0;
 }
