--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
-<% var d = new Date(); var year = d.getFullYear(); %>
+<% const d=new Date() let year=d.getFullYear() %>
 <footer>
   <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+  <a href="/error/generate-error">Trigger Error </a>
 </footer>
