--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,4 +1,5 @@
-<%# The Content Heading %> <% if (title) { %>
+<!-- classification view -->
+<% if (title) { %>
 <h1><%= title %></h1>
-<% } else { res.redirect('/') } %> <%# Messages block %> <%# messages() %> <%#
-The Inventory Items Display %> <%- grid %>
+<!-- <%- messages() %> -->
+<% } else { res.redirect('/') } %> <%- grid %>
