--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,60 +1,78 @@
-<link rel="stylesheet" href="/css/styles.css" />
-<link rel="icon" href="/images/favicon.ico" />
-<h1>Welcome to CSE Motors!</h1>
-
-<section class="hero">
-  <img src="/images/vehicles/delorean.jpg" alt="car" />
-  <div class="hero-text">
-    <h3>DMC Delorean</h3>
-    <ul>
-      <li>3 Cup holders</li>
-      <li>Superman doors</li>
-      <li>Fuzzy dice!</li>
-    </ul>
-    <input type="button" class="button-own" value="Own Today" />
-  </div>
-</section>
-<div class="content">
-  <section id="reviews">
-    <h2>DMC Delorean Reviews</h2>
-    <ul class="RW">
-      <li>"So fast it's almost like traveling in time." (4/5)</li>
-      <li>"Coolest ride on the road." (4/5)</li>
-      <li>"I'm feeling McFly!" (5/5)</li>
-      <li>"The most futuristic ride of our day." (4.5/5)</li>
-      <li>"80's livin and I love it." (5/5)</li>
-    </ul>
-  </section>
-  <section id="upgrades">
-    <h2>Delorean Upgrades</h2>
-    <div class="gallery">
-      <div class="caption-image">
+<div>
+  <div id="index-hero">
+    <div>
+      <h1>Welcome to CSE Motors</h1>
+      <%- messages() %>
+      <div id="index-hero-description">
+        <h2>DMC Delorean</h2>
         <div>
-          <img src="/images/upgrades/flux-cap.png" alt="Flux capacitor" />
+          <p>
+            3 Cup holders
+            <br />
+            Superman doors
+            <br />
+            Fuzzy dice!
+          </p>
         </div>
-        <p><a href="#">Flux Capacitor</a></p>
+        <img
+          src="./images/site/own_today.png"
+          alt="Own today!"
+          id="own-today-button"
+          height="40"
+        />
       </div>
-      <div class="caption-image">
-        <div>
-          <img src="/images/upgrades/flame.jpg" alt="Flame decal" />
-        </div>
-        <p><a href="#">Flame Decals</a></p>
-      </div>
-      <div class="caption-image">
-        <div>
-          <img
-            src="/images/upgrades/bumper_sticker.jpg"
-            alt="Hello world bumper sticker"
-          />
-        </div>
-        <p><a href="#">Bumper Stickers</a></p>
-      </div>
-      <div class="caption-image">
-        <div>
-          <img src="/images/upgrades/hub-cap.jpg" alt="Hub cap" />
-        </div>
-        <p><a href="#">Hub Caps</a></p>
+      <div>
+        <picture id="index-hero-image-container">
+          <source srcset="./images/vehicles/delorean-tn.jpg" width="400" />
+          <img src="./images/vehicles/delorean.jpg" alt="Delorean sports car" />
+        </picture>
       </div>
     </div>
-  </section>
+  </div>
+  <div id="index-content">
+    <div class="index-car-upgrades">
+      <h3>Delorean Upgrades</h3>
+      <div class="index-car-upgrade-cards">
+        <div class="index-upgrade-card">
+          <div>
+            <img src="./images/upgrades/flux-cap.png" alt="Flux Capacitor" />
+          </div>
+          <a href="">Flux Capacitor</a>
+        </div>
+        <div class="index-upgrade-card">
+          <div>
+            <img src="./images/upgrades/flame.jpg" alt="Flame Decals" />
+          </div>
+          <a href="">Flame Decals</a>
+        </div>
+        <div class="index-upgrade-card">
+          <div>
+            <img
+              src="./images/upgrades/bumper_sticker.jpg"
+              alt="Bumper Sticker"
+            />
+          </div>
+          <a href="">Bumper Stickers</a>
+        </div>
+        <div class="index-upgrade-card">
+          <div>
+            <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+          </div>
+          <a href="">Hub Caps</a>
+        </div>
+      </div>
+    </div>
+    <div class="index-car-reviews">
+      <h3>DMC Delorean Reviews</h3>
+      <div>
+        <ul>
+          <li>"So fast it's almost like traveling in time." (4/5)</li>
+          <li>"Coolest ride on the road." (4/5)</li>
+          <li>"I'm feeling McFly!" (5/5)</li>
+          <li>"The most futuristic ride of our day." (4.5/5)</li>
+          <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
