--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,10 @@
-<% const d=new Date() let year=d.getFullYear() %>
+<% const d = new Date() let year = d.getFullYear() %>
 <footer>
   <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
-  <a href="/error/generate-error">Trigger Error </a>
+  <a href="../../error/500">
+    <button id="big-red-button">
+      Error <br />
+      Button
+    </button>
+  </a>
 </footer>
