--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <div>
   <div id="index-hero">
     <div>
-      <h1>Welcome to CSE Motors</h1>
+      <h1>Welcome to CSE Motors!</h1>
       <%- messages() %>
       <div id="index-hero-description">
         <h2>DMC Delorean</h2>
