--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,10 +2,6 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- favicon -->
-  <link rel="icon" type="image/png" href="/images/site/favicon-32x32.png" />
   <title><%- title %> | CSE 340 App</title>
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="/css/styles-mobile.css" />
-  <script src="/js/script.js" type="module"></script>
+  <link rel="stylesheet" href="/css/styles.css" media="screen" />
 </head>
