--- a/views/account/update.ejs
+++ b/views/account/update.ejs
@@ -2,18 +2,15 @@
 <h1><%= title %></h1>
 <% } else { res.redirect('/') } %> <%- messages() %> <% if (errors) { %>
 <ul class="notice">
-  <% errors.array().forEach(error=> { %>
+  <% errors.array().forEach(error => { %>
   <li><%= error.msg %></li>
   <% }) %>
 </ul>
 <% } %>
 
-<form
-  name="register"
-  id="registerForm"
-  action="/account/register"
-  method="post"
->
+<h2>Update Account Information</h2>
+
+<form action="/account/update" method="post" name="update" id="updateAccount">
   <label for="account_firstname">First Name:</label>
   <input
     type="text"
@@ -22,6 +19,7 @@
     value="<%= locals.account_firstname %>"
     required
   />
+
   <label for="account_lastname">Last Name:</label>
   <input
     type="text"
@@ -30,6 +28,7 @@
     value="<%= locals.account_lastname %>"
     required
   />
+
   <label for="account_email">Email:</label>
   <input
     type="email"
@@ -38,11 +37,35 @@
     value="<%= locals.account_email %>"
     required
   />
+
+  <% if (locals.account_id) { %>
+  <input type="hidden" name="account_id" value="<%= locals.account_id %>" />
+  <% } %>
+
+  <input
+    type="hidden"
+    name="original_email"
+    value="<%= locals.accountData.account_email %>"
+  />
+
+  <button type="submit">Update Account</button>
+</form>
+
+<h2>Update Password</h2>
+
+<form
+  action="/account/updatePassword"
+  method="post"
+  name="updatePassword"
+  id="updatePassword"
+>
   <label for="account_password">Password:</label>
-  <span
-    >Passwords must be at least 12 characters and contain at least 1 number, 1
-    capital letter and 1 special character</span
-  >
+  <span>
+    By entering a password it will change the current password. Passwords must
+    be at least 12 characters and contain at least 1 number, 1 capital letter
+    and 1 special character
+  </span>
+
   <input
     type="password"
     name="account_password"
@@ -50,11 +73,17 @@
     pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
     required
   />
+
   <ul>
     <li>12 characters</li>
     <li>1 Capital letter</li>
     <li>1 Number</li>
     <li>1 special character</li>
   </ul>
-  <button type="submit">REGISTER</button>
+
+  <% if (locals.account_id) { %>
+  <input type="hidden" name="account_id" value="<%= locals.account_id %>" />
+  <% } %>
+
+  <button type="submit">Update Password</button>
 </form>
