--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/public/css/styles.css" />
-  </head>
-  <body>
-    <div class="error-container">
-      <h1><%= title %></h1>
-      <p><%= message %></p>
+<% if (title) { %>
+<h1 class="errorTitle"><%= title %></h1>
+<% } else { res.redirect('/') } %>
 
-      <div class="fun-message">
-        <p>Oop! It is just a 404 error!</p>
-        <p><a href="/">Go back home</a></p>
-      </div>
-    </div>
-  </body>
-</html>
+<p class="errorMessage"><%= message %></p>
