--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -1,35 +1,31 @@
-<!-- add vehicle class view -->
-<div>
-  <% if (title) { %>
-  <h1><%= title %></h1>
-  <%- messages() %> <% } else { res.redirect('/') } %>
-</div>
-<% if (errors) { %>
+<% if (title) { %>
+<h1><%= title %></h1>
+<% } %> <%- messages() %> <% if (errors) { %>
 <ul class="notice">
-  <% errors.array().forEach(error=> { %>
+  <% errors.array().forEach(error => { %>
   <li><%= error.msg %></li>
   <% }) %>
 </ul>
 <% } %>
 
-<form action="/inv/addClass" method="post" id="add_class">
-  <fieldset>
-    <h2>Classification Name</h2>
-    <div>
-      <label>
-        <span class="form_direct">
-          Enter the name of the new classification.</span
-        >
-        <span class="form_instruct"
-          >Classification cannot contain any spaces or special characters.</span
-        >
-        <input
-          name="classification_name"
-          type="text"
-          pattern="^[a-zA-Z0-9]+$"
-        />
-      </label>
-    </div>
-    <button>Add Classification</button>
-  </fieldset>
+<form
+  action="/inv/add-classification"
+  method="post"
+  name="add-classification"
+  id="addClassification"
+>
+  <label for="classification_name">New Classification Name: </label>
+  <span>
+    The new classification name cannot contain a space or special character of
+    any kind
+  </span>
+  <input
+    type="text"
+    id="classificationName"
+    name="classification_name"
+    pattern="^[A-Za-z0-9]+$"
+    value="<%= locals.classification_name %>"
+    required
+  />
+  <button type="submit">Create New Classification</button>
 </form>
