--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -1,161 +1,95 @@
-<!-- add vehicle class view -->
-<div>
-  <% if (title) { %>
-  <h1><%= title %></h1>
-  <%- messages() %> <% } else { res.redirect('/') } %>
-</div>
-<% if (errors) { %>
+<% if (title) { %>
+<h1><%= title %></h1>
+<% } %> <%- messages() %> <% if (errors) { %>
 <ul class="notice">
-  <% errors.array().forEach(error=> { %>
+  <% errors.array().forEach(error => { %>
   <li><%= error.msg %></li>
   <% }) %>
 </ul>
 <% } %>
 
-<form action="/inv/addInv" method="post" id="add_inv">
-  <fieldset>
-    <h2>All fields are required</h2>
-    <div class="form_part">
-      <label>
-        <span class="form_direct"><p>Classification</p></span>
-        <select
-          name="classification_id"
-          id="className"
-          value="<%= locals.classification_id %>"
-          required
-        >
-          <option value="">Choose a Classification</option>
-          <%- classDrop %>
-        </select>
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Make</p>
-        <input
-          type="text"
-          name="inv_make"
-          id="invMake"
-          required
-          placeholder="Min of 3 characters"
-          pattern="^.{3,}$"
-          value="<%= locals.inv_make %>"
-        />
-        <!-- <input name="account_firstname" type="text" > -->
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Model</p>
-        <input
-          type="text"
-          name="inv_model"
-          id="invModel"
-          required
-          placeholder="Min of 3 characters"
-          pattern="^.{3,}$"
-          value="<%= locals.inv_model %>"
-        />
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Year</p>
-        <input
-          name="inv_year"
-          type="number"
-          required
-          id="invYear"
-          value="<%= locals.inv_year %>"
-          placeholder="4-digit year"
-          pattern="^/d{4}$"
-        />
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Description</p>
-        <input
-          name="inv_description"
-          id="invDescription"
-          type="text"
-          multiple
-          value="<%= locals.inv_description %>"
-          required
-        />
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Image Path</p>
-        <!-- serverside should validate special character exclusion -->
-        <input
-          name="inv_image"
-          id="invImage"
-          type="text"
-          required
-          value="/images/vehicles/no-image.png"
-          pattern="^\/images\/vehicles\/[a-zA-Z0-9_-]+\.(jpg|jpeg|png)$"
-        />
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Thumbnail Path</p>
-        <!-- serverside should validate special character exclusion -->
-        <input
-          name="inv_thumbnail"
-          id="invThumbnail"
-          type="text"
-          required
-          value="/images/vehicles/no-image.png"
-          pattern="^\/images\/vehicles\/[a-zA-Z0-9_-]+\.(jpg|jpeg|png)$"
-        />
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Price</p>
-        <input
-          name="inv_price"
-          id="invPrice"
-          type="number"
-          step="0.01"
-          value="<%= locals.inv_price %>"
-          required
-          placeholder="Decimal or integer"
-          pattern="^\d+(\.\d{1,2})?$"
-        />
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Miles</p>
-        <input
-          name="inv_miles"
-          id="invMiles"
-          type="number"
-          required
-          placeholder="Numbers only"
-          value="<%= locals.inv_miles %>"
-          pattern="^/d{1,}$"
-        />
-      </label>
-    </div>
-    <div class="form_part">
-      <label>
-        <p>Color</p>
-        <input
-          name="inv_color"
-          id="invColor"
-          type="text"
-          value="<%= locals.inv_color %>"
-          required
-          pattern="^\w{1,}$"
-        />
-      </label>
-    </div>
+<form
+  action="/inv/add-inventory"
+  method="post"
+  name="add-inventory"
+  id="addInventory"
+>
+  <label for="inv_make">Car Brand:</label>
+  <input
+    type="text"
+    name="inv_make"
+    id="invMake"
+    value="<%= locals.inv_make %>"
+    pattern="^[A-Za-z\s]+$"
+    required
+  />
 
-    <button>Add Vehicle</button>
-  </fieldset>
+  <label for="inv_model">Car Model:</label>
+  <input
+    type="text"
+    name="inv_model"
+    id="invModel"
+    value="<%= locals.inv_model %>"
+    pattern="^[A-Za-z0-9\s]+$"
+    required
+  />
+
+  <label for="inv_year">Car Year:</label>
+  <input
+    type="text"
+    name="inv_year"
+    id="invYear"
+    value="<%= locals.inv_year %>"
+    pattern="^[0-9]+$"
+    minlength="4"
+    maxlength="4"
+    required
+  />
+
+  <label for="inv_description">Description:</label>
+  <textarea
+    name="inv_description"
+    id="invDescription"
+    maxlength="2000"
+    required
+  >
+<%= locals.inv_description %></textarea
+  >
+
+  <label for="inv_price">Price:</label>
+  <input
+    type="number"
+    name="inv_price"
+    id="invPrice"
+    value="<%= locals.inv_price %>"
+    min="0"
+    step="1"
+    required
+  />
+
+  <label for="inv_miles">Miles:</label>
+  <input
+    type="number"
+    name="inv_miles"
+    id="invMiles"
+    value="<%= locals.inv_miles %>"
+    min="0"
+    step="1"
+    required
+  />
+
+  <label for="inv_color">Car Color:</label>
+  <input
+    type="text"
+    name="inv_color"
+    id="invColor"
+    value="<%= locals.inv_color %>"
+    pattern="^[A-Za-z\s]+$"
+    required
+  />
+
+  <label for="classification_id">Classification:</label>
+  <%- select %>
+
+  <button type="submit">Add Car</button>
 </form>
