--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,5 +1,3 @@
-<!-- classification view -->
 <% if (title) { %>
 <h1><%= title %></h1>
-<!-- <%- messages() %> -->
-<% } else { res.redirect('/') } %> <%- grid %>
+<% } %> <%# messages() %> <%- grid %>
