--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -144,9 +144,9 @@ h3 {
 .img-container {
   width: 100%;
   height: 9dvh;
-  background-color: rgb(125, 125, 126);
+  background-color: rgb(15, 69, 231);
   margin-bottom: 1dvh;
-  border: #0467f0 1px solid;
+  border: #717275 1px solid;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -185,7 +185,7 @@ nav a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #303030;
+  background-color: #a3a3a5;
 }
 
 #inv-display img {
@@ -291,7 +291,7 @@ nav a {
 }
 
 .purchaseButton {
-  background-color: rgb(67, 207, 235);
+  background-color: rgb(67, 140, 235);
   color: rgb(5, 5, 5);
   font-weight: bold;
 }
@@ -608,7 +608,7 @@ h1 {
 
 #deleteInventory button {
   padding: 10px 15px;
-  background-color: #f30404;
+  background-color: #c4c5c6;
   color: #fefefe;
   border: #000;
   border-radius: 5px;
