--- a/views/inventory/managment.ejs
+++ b/views/inventory/managment.ejs
@@ -1,6 +1,6 @@
 <% if (title) { %>
 <h1><%= title %></h1>
-<% } else { res.redirect('/') } %> <%- messages() %>
+<% } %> <%- messages() %>
 
 <a href="/inv/add-classification">Add classification</a>
 <a href="/inv/add-inventory">Add inventory</a>
