--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,19 +1,15 @@
 <% if (title) { %>
 <h1><%= title %></h1>
-<% } %> <%- messages() %>
+<% } else { res.redirect('/') } %> <%- messages() %>
 
 <a href="/inv/add-classification">Add classification</a>
 <a href="/inv/add-inventory">Add inventory</a>
-
 <h2>Manage Inventory</h2>
 <p>
   Select a classification from the list to see the items belonging to the
-  classification.
+  classification
 </p>
-
 <%- select %>
-
 <table id="inventoryDisplay"></table>
-
 <noscript>JavaScript must be enabled to use this page.</noscript>
 <script src="../js/inventory.js"></script>
